--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1292,6 +1292,11 @@ body {
   }
 }
 @media (max-width: 1280px) {
+  #header aside button {
+    width: 41px;
+  }
+}
+@media (max-width: 1280px) {
   #header aside ul {
     display: block !important;
     font-size: 0;
@@ -1301,6 +1306,15 @@ body {
   #header aside ul > * {
     display: inline-block;
   }
+}
+#header aside ul li:nth-of-type(1).lang-en {
+  display: none;
+}
+#header aside ul li:nth-of-type(2).lang-ko {
+  display: none;
+}
+#header aside ul li:nth-of-type(3).lang-zh {
+  display: none;
 }
 #header aside li {
   position: relative;
@@ -1330,6 +1344,15 @@ body {
     height: 21px;
     background: #e6e7e8;
   }
+  #header aside li:nth-of-type(1) a div {
+    background-image: url("../images/flag_earth.svg");
+  }
+  #header aside li:nth-of-type(2) a div {
+    background-image: url("../images/flag_korea.svg");
+  }
+  #header aside li:nth-of-type(3) a div {
+    background-image: url("../images/flag_china.svg");
+  }
 }
 #header aside li > a {
   display: flex; /* Enable flexbox for horizontal alignment */
@@ -1345,11 +1368,30 @@ body {
 #header aside button > div.flag_select.lang-zh {
   background-image: url("../images/flag_china_white.svg");
 }
+@media (max-width: 1280px) {
+  #header aside button > div.flag_select {
+    background-image: url("../images/flag_earth.svg");
+  }
+  #header aside button > div.flag_select.lang-en {
+    background-image: url("../images/flag_earth.svg");
+  }
+  #header aside button > div.flag_select.lang-ko {
+    background-image: url("../images/flag_korea.svg");
+  }
+  #header aside button > div.flag_select.lang-zh {
+    background-image: url("../images/flag_china.svg");
+  }
+}
 #header aside button > h3.text_ko, #header aside button > h3.text_zh {
   display: none;
 }
 #header aside button > h3.text_en.lang-en, #header aside button > h3.text_ko.lang-ko, #header aside button > h3.text_zh.lang-zh {
   display: block;
+}
+@media (max-width: 1280px) {
+  #header aside button > h3.text_en, #header aside button > h3.text_ko, #header aside button > h3.text_zh {
+    display: none !important;
+  }
 }
 #header aside button > h3.text_en.lang-ko, #header aside button > h3.text_en.lang-zh {
   display: none;
@@ -1444,6 +1486,11 @@ body {
     height: 6.55px;
   }
 }
+@media (max-width: 1280px) {
+  #header aside button > div.down_arrow {
+    display: none;
+  }
+}
 #header aside li > a > h3 {
   color: #FFF;
   text-align: center;
@@ -1456,6 +1503,11 @@ body {
 }
 #header aside li > a > h3.text_cn {
   margin-left: 8px;
+}
+@media (max-width: 1280px) {
+  #header aside li > a > h3 {
+    display: none;
+  }
 }
 #header aside button > h3 {
   color: #FFF;
@@ -2785,9 +2837,28 @@ body {
   display: inline-block;
   color: rgba(154, 129, 151, 0.2);
   font-family: Poppins;
-  font-size: 125px;
   font-style: normal;
   font-weight: 700;
+}
+@media (min-width: 1281px) {
+  .logistics .swiper .swiper-slide div h2 {
+    font-size: 125px;
+  }
+}
+@media (max-width: 1280px) {
+  .logistics .swiper .swiper-slide div h2 {
+    font-size: 125px;
+  }
+}
+@media (max-width: 640px) {
+  .logistics .swiper .swiper-slide div h2 {
+    font-size: 85px;
+  }
+}
+@media (max-width: 480px) {
+  .logistics .swiper .swiper-slide div h2 {
+    font-size: 85px;
+  }
 }
 .logistics .swiper .swiper-slide div h2.lang-ko {
   color: rgba(145, 162, 143, 0.2);
