--- a/resources/css/style.scss
+++ b/resources/css/style.scss
@@ -217,11 +217,33 @@ body {
             padding: 5px 30px;
             border-bottom: 1px solid rgba(#d2d2d2, 0.5);
         }
+
+        button {
+            @include middle {
+                width: 41px;
+            }
+        }
+
         ul {
             @include middle {
                 display: block !important;
                 @include horizontal;
             }
+            li {
+                
+                &:nth-of-type(1).lang-en {
+                    display:none
+                }
+
+                &:nth-of-type(2).lang-ko {
+                    display:none
+                }
+
+                &:nth-of-type(3).lang-zh {
+                    display:none
+                }
+            }
+            
         }
         li {
             position: relative;
@@ -248,6 +270,18 @@ body {
                     height: 21px;
                     background: #e6e7e8;
                 }
+
+                &:nth-of-type(1) a div {
+                    background-image: url("../images/flag_earth.svg");
+                }
+                &:nth-of-type(2) a div {
+                    background-image: url("../images/flag_korea.svg");
+                }
+                &:nth-of-type(3) a div {
+                    background-image: url("../images/flag_china.svg");
+                }
+
+
             }
         }
 
@@ -267,12 +301,33 @@ body {
             background-image: url("../images/flag_china_white.svg");
         }
 
+        @include middle {
+            button > div.flag_select {
+                background-image: url("../images/flag_earth.svg");
+            }
+            button > div.flag_select.lang-en {
+                background-image: url("../images/flag_earth.svg");
+            }
+            button > div.flag_select.lang-ko {
+                background-image: url("../images/flag_korea.svg");
+            }
+            button > div.flag_select.lang-zh {
+                background-image: url("../images/flag_china.svg");
+            }
+        }
+
         button > h3.text_ko, button > h3.text_zh {
             display:none
         }
 
         button > h3.text_en.lang-en, button > h3.text_ko.lang-ko, button > h3.text_zh.lang-zh {
             display:block
+        }
+
+        @include middle {
+            button > h3.text_en, button > h3.text_ko, button > h3.text_zh {
+                display:none !important
+            }
         }
 
         button > h3.text_en.lang-ko, button > h3.text_en.lang-zh {
@@ -299,7 +354,11 @@ body {
             display: none;
         }
 
-
+        // @include middle {
+        //     ul > li {
+        //         display: none;
+        //     }
+        // }
         
 
         
@@ -330,6 +389,12 @@ body {
             background-repeat: no-repeat;
             background-image: url("../images/down_arrow.svg");
         }
+        
+        @include middle {
+            button > div.down_arrow {
+                display:none;
+            }
+        }
 
         li > a > h3 {
             color: #FFF;
@@ -345,6 +410,12 @@ body {
 
         li > a > h3.text_cn {
             margin-left:8px;
+        }
+
+        @include middle {
+            li > a > h3 {
+                display:none;
+            }
         }
 
 
@@ -1080,7 +1151,8 @@ body {
                     display: inline-block;
                     color: rgb($primary-color-en, 0.2);
                     font-family: Poppins;
-                    font-size: 125px;
+                    // font-size: 125px;
+                    @include each4(font-size, 125px, 125px, 85px, 85px);
                     font-style: normal;
                     font-weight: 700; 
                 }
