--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,4 +1,4 @@
-@import url(https://fonts.googleapis.com/earlyaccess/nanummyeongjo.css);
+@import url("https://fonts.googleapis.com/css2?family=Nanum+Myeongjo:wght@400;700;800&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Reddit+Mono:wght@200..900&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Reddit+Mono:wght@200..900&display=swap");
 .hidden {
@@ -1051,6 +1051,12 @@ button.swiper-pagination-bullet {
   overflow: hidden;
 }
 
+@font-face {
+  font-family: "NanumMyeongjo"; /* Name of the font */
+  src: url("fonts/NanumMyeongjo-Regular.ttf") format("truetype"); /* Path to the font file */
+  font-weight: normal;
+  font-style: normal;
+}
 body {
   overflow-x: hidden;
 }
@@ -3590,13 +3596,33 @@ body {
   }
 }
 @media (min-width: 1281px) {
+  .production .swiper .swiper-slide:nth-child(1) > div > p.lang-ko {
+    max-width: 609px;
+  }
+}
+@media (max-width: 1280px) {
+  .production .swiper .swiper-slide:nth-child(1) > div > p.lang-ko {
+    max-width: 448px;
+  }
+}
+@media (min-width: 1281px) {
   .production .swiper .swiper-slide:nth-child(2) > div > p.lang-ko {
-    padding-right: 22px;
+    padding-right: 20px;
   }
 }
 @media (max-width: 1280px) {
   .production .swiper .swiper-slide:nth-child(2) > div > p.lang-ko {
     padding-right: 13px;
+  }
+}
+@media (min-width: 1281px) {
+  .production .swiper .swiper-slide:nth-child(2) > div > p.lang-ko {
+    max-width: 609px;
+  }
+}
+@media (max-width: 1280px) {
+  .production .swiper .swiper-slide:nth-child(2) > div > p.lang-ko {
+    max-width: 448px;
   }
 }
 @media (min-width: 1281px) {
