--- a/resources/css/style.scss
+++ b/resources/css/style.scss
@@ -13,6 +13,13 @@
 @import url('https://fonts.googleapis.com/css2?family=Reddit+Mono:wght@200..900&display=swap'); // Reddit mono
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Reddit+Mono:wght@200..900&display=swap'); //Poppin font
 
+@font-face {
+    font-family: 'NanumMyeongjo'; /* Name of the font */
+    src: url('fonts/NanumMyeongjo-Regular.ttf') format('truetype'); /* Path to the font file */
+    font-weight: normal;
+    font-style: normal;
+}
+
 $primary-color-en: #9a8197;
 $primary-color-ko: #91A28F;
 $primary-color-zh: #DD577A;
@@ -1148,17 +1155,40 @@ body {
                     @include each(font-size, 17px, 13px);
                     line-height: 1.76;
                     color: #555;
-
+                    // max-width: 609px;
+                    
                     
                 }
             }
 
             &:nth-child(1) > div > p.lang-ko {
                 @include each(padding-right, 30px, 13px);
+                @include each(max-width, 609px, 448px);
             }
+
             &:nth-child(2) > div > p.lang-ko {
-                @include each(padding-right, 22px, 13px);
+                @include each(padding-right, 20px, 13px);
+                @include each(max-width, 609px, 448px);
             }
+
+            // &:nth-child(2) > div > p.lang-ko::first-line {
+            //     // @include each(padding-right, 20px, 13px);
+            //     // font-size:100px;
+            //     // @include each(padding-right, 60px, 13px);
+            //     // font-size:100px;
+            //     // & .lang-ko {
+            //     // font-size:100px;
+            //         @include each(padding-right, 20px, 13px);
+            //     // }
+            // }
+
+            // &:nth-child(2) > div > p.lang-ko {
+            //     // @include each(padding-right, 20px, 13px);
+                
+            //     &::first-line {
+            //         @include each(padding-right, 40px, 13px);
+            //     }
+            // }
             &:nth-child(3) > div > p.lang-ko {
                 @include each(padding-right, 30px, 13px);
             }
